--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:FIRyQjAdQ4IBkdaS53aBdp6k5vBFKCXBXdUkwGaVz+VVYtp579MMbrsI0ub3RaS7E+Xnc1ugbBWx3yQbLs66dlA=,iv:q3ZDOnbHBxM+7c3ro+iuiKqwXQgea78cc82iBFPPyck=,tag:cjGxONo3Ipp482MKmnS1Zg==,type:comment]
-    #ENC[AES256_GCM,data:+C0ZhA0vyGsOC1CMPaBeSHqpBC9S53gt0pzme9Dk2/zSAdS7pjmjC2ZKiP8=,iv:vX+F0Gq40bzQY7fqfQwK/R1abpWRo5EP/PkSzgZSo3A=,tag:5fG8w2A1RkJNZ1TiykUOGA==,type:comment]
-    VIP: ENC[AES256_GCM,data:qVSb9Qnvxo8vOFtt2g==,iv:BXXe9w+5W8QP9ZkoaeSUMC/0ZC9Zvy7JAud+iobDBug=,tag:vYPvXYRG6RM4q1fVuq0SmQ==,type:str]
-    #ENC[AES256_GCM,data:8k1yLr5KdhYH60d+FrKgHNoeF/FjSBGf/K8I,iv:0nw3IGNwZsiCht9EGSxcaF0jskP5u5AK4t6y16F2oRg=,tag:fx1ktiJmlnrtgURuD1nKLA==,type:comment]
-    #ENC[AES256_GCM,data:2xMJ8lytrbr0UqQF1dajKVSAIapY1Y1Wne43HsoRwavyD4OsHrYJLDSZtzIf9Wlp/AoBihsMlc7j7yub40mwTpfGKKyVdHMTZRSnWFj1kq5VvZ1zyIHkfSM=,iv:kaNBYJWNF1UFvxML3AiKp6dCRNFREjOQ3JTO1sMYPAk=,tag:zadb9F8aZgUS6PGExaCHzA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:2iU+BHDZJOpIk6eg+X0=,iv:XqFMKacKq/BpfyT83hML1YIXWpfhrdNG5lpqyN1QlZY=,tag:MxeOn2NanJ0mogd4LN8A6Q==,type:str]
-    #ENC[AES256_GCM,data:w6fVEeqH6U6QYb+cpBFaIvLe2aJyJeAouhGqepQq/4CVtg==,iv:PhTi60iiaN7F6zorOjqC86gCEvz7OetdRhTWN5udRdo=,tag:+uh7bWD85cPM5k7H93Sh9A==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:D7eK1t99qJFMnclI0g==,iv:eC2aawGh7ymKHbU1a8vtd+wDdCUL8gN7LWGLYoV7HxU=,tag:GON/rptCpUZMpFCVWF9rTw==,type:str]
-    #ENC[AES256_GCM,data:lTcgRWnp2+cqXJwEGwzNtd5V8DEj1JyCIDuT8yHBUPwUFwNGp4kzI4KV3/dkEa4=,iv:OgZK5VGbFsyhVKkw2P2ttuIcFuswlbjiumD5sLJifDQ=,tag:OAHR364GKf2lQZNGYbQxwA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:8oMuBfLIc/WVyAWNE25TExdnqzEUvDjgaX3TTjePJA==,iv:unsA4HX0j/I4Oi2Pbm19SdQn++47x6RPeMPODFvkgTY=,tag:5DiIO4LtBaaeVP7vVBaYeg==,type:str]
-    #ENC[AES256_GCM,data:Dez+ZOCbNFgpYPnIkKhhCLWeFYdNnyKE2b1m8lTfHr4BW9AQa401n5QKmAlkcHZAxllI47RR7dfh7yLrqUlo6cJxTudy8rgP3EcGDknATaTldg==,iv:FxCek0mL7X4cnQ41iUDgi+leYN9l4Hd4E97HRDi39Qw=,tag:Rk3s1EjRgdhQfjxISoz6jA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:GWKVpOep1CtcxVViu9m1,iv:8yTBmGhHE/1LFQXyV/DICQ2Cah4j42VxKtV5QrV/YTM=,tag:aXtVNx4NI4eiJAFYxbYVlA==,type:str]
-    #ENC[AES256_GCM,data:0rfsDkz+hkE6m7duePaDRgKophfN4MdPgK5n8IVzn8I0,iv:2ERrjZVEmL7trH5vuDAjndh1p3UMIfGNmkcCt472ikc=,tag:kPRkdtF0rw+lCUOr8khFCA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:NL5OYkO3xftolT6aH13V,iv:5AxQON8pNnMQdRoKYY66Z9LLdaf6lg4nwqQX9N7vR2I=,tag:8XiH1d5k1QIOJyUZZv1U7g==,type:str]
-    #ENC[AES256_GCM,data:kKlt0PCcVb3N5B4+sqPCgC/UiTq0h4/xVC1RsBs1jrnuWWehQ0zWZQPmSDIHmxB5Ovcf7lhA/XbG4jjks+8guK3C2PzTppvdm2MxpoUltvk=,iv:Y0ztjCgqFQN9Kwy3wLCuXdWK9PjK14H2wj0BoqdXMAo=,tag:y9qQUEhGNCrzLkREdG+/oA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:IWc+s9IweWFIsbJs0/rQ,iv:1qULQOx57svxOTkkyPATDDQVK0oFlQPPR+JgTKWwMuk=,tag:udsHa+XVrWY+3HsCvx+bYQ==,type:str]
-    #ENC[AES256_GCM,data:pj6Tly0TlKaS2HWBOr0P6NkRc1D9bj9/vode2H6fHLn6rDUgya7nT/gOiL6+HXPpo/ilxDH7XdZ+URSSmoHzEjyKvWTeAvCEEBI5Oa6LEZZZ+1HgQOvM,iv:OkdLdqsaCpnsqYP5b//W5Av1c83b/2mXFfqvAM4Gyok=,tag:uKTpjKzzrN8FNIoDQfSu8g==,type:comment]
-    #ENC[AES256_GCM,data:X5GcoYy9Dm01gtuH0mN21SpSkbVNOY6o/u7cKntiOAO+Xmt3IQxw2YHAm2xx5UqiNysPYLtACBH7bDvuO4dT9bFv+UsjqRnjGT5otp80GtrYM5xadUzDio97qFEQcgpfcF8LC5GbM7lOUHgt+dR7BG4Gr2Z2avwT+3Wr6w==,iv:HCqPVPVelIfOotroHVhzXR9sLy3Ow7cWWHGlNoa7rcY=,tag:/8mneFzP2zsZlA1IcB9/IA==,type:comment]
-    #ENC[AES256_GCM,data:PlHmVLwt/0sehSiGwSWqLjAFxhqYHzk9q90tRMRvk+2cm1bXt2zpT2wDo+C/nZ32CTs7kaLmSnyVeYt3qIpic40fQ6ggbFJm4SLRNr98QMc=,iv:dOz+j4N2pvlKC5faekbCzdMzU8PY1bG2COtHKyJtOXQ=,tag:/MOocKb7koMZb1YWLKMytg==,type:comment]
-    #ENC[AES256_GCM,data:d7cBLkC5QkrtG8Vvj2+DQ1P235Jx6vrB0b84LUPmdk3FxXuEpzlv4Pq5b3CZlcNOGplecRqs,iv:uMfOEnZ/z08CBP0jE1T0uNCth4FPiyt21v7Vt5rLelU=,tag:FQOCgrEg8GZfWaV9PhvviQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:OsEbT4aKuGb5FoKL,iv:v0rY6TjrOHxHilhfqiduydXfiRdJcEBtnDrdn3WfM7s=,tag:IUDtVlDVMjfHlbhA8d1whA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:q4R6neQIA6DeZ6j+i6yYpzk=,iv://8pp/oRBf29307Usfr4l/J4BRNOEcmwmQBIh+eiPAI=,tag:cQgqGkcCfkmvnY35lmUOLA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:Ph73ABpnQAvFDbUoiUdpGjx2WnfGh+svOGlTa7jigns=,iv:CV2gcqSgftqVNVPEBekvhCoqPy2k5XSsRr/R1xgtrRo=,tag:UgCbrzElcjX6PXfycGPNSw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:FMk9WOhhd6XgOzz6b8rpZX0PHsdNFzAd7SYmtkpINI/x965Q/QfLyw==,iv:V0e3f4H5RzXbRtg/zU53Iwtw6/epxi7nNc2ixfuzyWU=,tag:22tPkaLAtEceDv+PzHUsAQ==,type:str]
-    #ENC[AES256_GCM,data:mSz8OcdtalC3ll9Fp+AyFclmjzQTe/UjzT8sjPBBU9zad+yeOmoO/ChDLDgjj41Qocy/Jr91MNVbs0Bw7g6c2Q==,iv:5Gs8YK/7Q0c3CmHNNpM82WmZWo/SspHA6ZsGhVr8byU=,tag:7WUdls3GDSawklrk0ZjNTQ==,type:comment]
-    #ENC[AES256_GCM,data:6IOUg64BAHdW8NbfelZbONXqLRaXq7GhufE/8c6WEh0oTCnnuIt4K3Qa5heohCb3qrtqgBn/qdE=,iv:MevMdryjSEsBWmfkhxEIVN4e1//L7pECOJAq5BNBVOQ=,tag:YaGUybHLhSfr3gkj+WxRPQ==,type:comment]
-    #ENC[AES256_GCM,data:3apJk2ncfqEMcBwRO3IdifR6nwTmkjWuiQ==,iv:VvImZIt1cbrtbStkqBPBfgCN+5a7mVyqH2HC8TuaVKo=,tag:KZPNyOHt5EtzLHnP1s+3nw==,type:comment]
-    #ENC[AES256_GCM,data:7hFk18Aoub3wfJkRFAfVVh7/vxVZZP6Y2wuqqeTcGjygweLIrrodYNBuylNWIPVs88Fw3R2Mn/RL0cozdeg4jZLodF7ysJfJ+HDwxjY=,iv:R94sfBuRIK3uqiYn3byKLzh0iby8jb2sww5TehNWhKo=,tag:0XVBXxMlFFdDqGTP5rnX7A==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:fSbO1brmBHXhidjwCqLAvXls2O03Xvs7/btF82nN34eroNtm/AiHwzlW4Uoa/0vU,iv:zAPzzXeRTTJG1xWUzCUAQDsyJ3UIHd3EGN100zECDAA=,tag:DlhQwmDbCHzh3TuT4ULBsg==,type:str]
-    #ENC[AES256_GCM,data:LJ1RnGSqOSUn+rjJjZnaFBuaeh9DrSk72Jl5zqxtMLTzbl/t/RWzPNMqPdoVbTvM50EGcwlZGHMovLmWtQJ3VICvavNZnHc=,iv:iAhGwAOhyBrPJf1XNyQFqACFZ0II5T3TVWY7SBph66k=,tag:rvMsYFyYVdAzEqXVXv/wpA==,type:comment]
-    #ENC[AES256_GCM,data:28G6C1SnU9H7ROuTn9MV65lRQ4DZxtC2rWeAEpEmNS3Wf+lWPDS3sPs51+fBoiNAeuzEWp/V,iv:BiDh/cRBnrtbRfGtcrvfxb3tZe8N8lVAVIYWJHzQk2k=,tag:AD1cVwtCAS45rQ7EYiFUcw==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:/Mjiqp32fQ==,iv:xcJr6gAidcbZGIYgmVP0H6/OmnjHfgZgjjJgEjHdT44=,tag:nkHLlr/Oerl7wosLc8Hw5g==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:30Ly9lbgGwEHyPDIS5mNnwbqxNo=,iv:6oTXCvLCxS4tFHeqru5fTbB+k3a/ZfUp9vw8s1lMitg=,tag:jD13C+6X6inU5d48GZCptA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:RP9RBfxYAf3jYWA=,iv:7AhdhcCWm9DKoqT0VYnI70zOV66sOuH42J17pjVUUiw=,tag:QjNfqhw5pvExbCVWKzXPww==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:aPzYHKqJp8PufJ/BRLLg,iv:YCk01KPya1+Sd2RTyTwJnhZhlnheDO0ieNcz1ZR4yQg=,tag:ugHwl2Jt0waOOgfhv7iqdQ==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:OjKBv8UqfrhVFbreInWT89aum2GLR9pZuA==,iv:DkqHtB7QebA2jBYch/kpVa/mgV9i3eEFie7gNoWAqyk=,tag:v3idpiOHT30Cf0abZvQpwQ==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:ECijPlRGRyLKvQz/hTLv+bxBo3PndTUKVmcHNN/R1w==,iv:oLkLMO4rASHi/qkRlrxrSLsIMubMBrtPmbIwnCtJpyU=,tag:GKOI3OF9OUj/6875+9lyLg==,type:str]
-    #ENC[AES256_GCM,data:hNJVioNL5vOaNjX/OyvRC0wjf4LErfF94OfU9lJ4PaAHLE0Qxcc=,iv:zRyEjUq0Tui8fnU2HYXe8MfgGtoGFsEDAW84oX+xdNA=,tag:zkQDt9XSZCSehDh1QhAkEg==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:nQH8lL7RYCwlqRxN3v0dbDzJ/hI=,iv:aG50fv2z2Tg2JgE9JBexGaEtWCxwe1NIyGfjoy8mdkA=,tag:73czCZ/gghzA2ft4yIqaUQ==,type:str]
-    #ENC[AES256_GCM,data:2SLr3GvDi4X/wqjjVqo=,iv:i3BUp7M7ZvYNlGK7uiYmqUdWya0pQxZwhT6YIMMZjXk=,tag:O5tcSTiOd1KnE2V+t56S+g==,type:comment]
-    PODNET: ENC[AES256_GCM,data:iihFTzrKjtXfLx1PVw==,iv:TmA4nDpC7PCMkHkx2aap8XhrbDt7mvtG67W/ISVQNaY=,tag:Y3NqVf9R32lcpa9kF7F0Kg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:Z+9sAwmArQTVz2LXOg==,iv:2OT4QmXApLoXwWFLQIdjwXC+KbjYFtkSfMPH+tBx/So=,tag:PFuOOb1CnU/XiluDJFWF9A==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:Egx/cg==,iv:GR2JQfFH4E9JSDGK5ZwJirkO/xwEB55bCgY7v2ms3Ds=,tag:14V2OQkbHtaMpOmxckXypA==,type:str]
+    #ENC[AES256_GCM,data:wm+z8lipz8Xq5RoxX9+nQiakvRuMdN4/QE2lcMgILNt7QV0oRtNlGSeQ8WMaAFsfgBpnA0U3q15jHzzZRB/hFqk=,iv:yJ35BTcMvt3zsfEdPGEi/ziBU/MDviInFKSN+N9myu4=,tag:tqDA/R7+fkSFxkx9XSjsPg==,type:comment]
+    #ENC[AES256_GCM,data:pPPo5MneX2nWK9whtXjQNIty3Fh1yac3PYnDLBVaa6LnBR0oDjla6rgoS8o=,iv:12wxyT6fSGBTUoHDEKFKyXCBcRSEqBJyj86yJCKPfLA=,tag:3JblBLFZtifPtlZKhT1k2Q==,type:comment]
+    VIP: ENC[AES256_GCM,data:z2Ayxi75BeS7SkEQbA==,iv:TbobviRFo05M7sbc7sHKpYjpJ58Bs+atInEAEprF54U=,tag:mtXl6kOrOs8qVqnVJLGqOA==,type:str]
+    #ENC[AES256_GCM,data:lPtOGKXt8QsPKKpZC9KgNsnXyTTBhydU5FRJ,iv:ZIDxLk4r5YYu0uQyhY9kJXZ47W3YcQtCHwSjczbjJX8=,tag:NrkhpxsbXHE7AuWZtgycig==,type:comment]
+    #ENC[AES256_GCM,data:JQgBxDwVD75ydpxjfgwchtRTeeoH3F6RV3xVuowjSLIfnU1Kn+mkk/2sSJh4liBo48R4zA5CqaYltuiDb3EC6wrG/yrMBJd5huSPhblsQ1BOsLe0WE0HALM=,iv:nLw6BPkpTQWMS2azsjUWJ/pfaASR0k3H+Kj5oP/NpBA=,tag:9m1bzSDtLyB+pOsnRw9GIg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:70dH1SVyg62zl7AJHVc=,iv:7WJCuddINy9dO/tlVsQLJdH+X86dZZ2HgkFUC3xFF9w=,tag:p/vJ3CCWPV/OLkwYBenPpg==,type:str]
+    #ENC[AES256_GCM,data:lolCkRhoM5QEE01zOU5cFeeAy0ssH4XF5txyej2vuGu2NA==,iv:JClXw9Q4o/t22053LfvVM0APrpavRj4xYczpAgh5tWU=,tag:AnC/KzdqNEeOoaIICxtTDA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:bMqmCEL9cJKOZ+2zgw==,iv:hqEMnFloJadugsyKYzZQrVak0Vm5iEf0AtK7FU84rHQ=,tag:mOxJg6b51dJvfwA4swnxDg==,type:str]
+    #ENC[AES256_GCM,data:rNMLb7Ujo9E+yzMtV/meKb0V8wcsT6HJqQ71qWISOapZznYUgEzNbUTPn1jqQCc=,iv:ss6Mcmmb2AxEgR21VbOCLiuAVMeUGDehVk9f9ki/tIU=,tag:16/CzuaQVqhjXgvF6Bqu3w==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:o7SuOp9TixB5K4rdIIgcB9c92HTrEIb7T2YrklbOzQ==,iv:wRRzceVb+PASo07E3zXbSJ38tQnnXvcquv7GQNDRyG0=,tag:WmOMGcDXhFP2W9zPnNl+Kw==,type:str]
+    #ENC[AES256_GCM,data:tBhtdr78cvh0kXtlJTM1sXoNWeXqZSikSQ4L7KVM2F7ZTCvbnWzlANSIBuuXeLl+t+6tHDkzn1jx5eByms7lFlOLy0wKYH1LgnO/STwqwEINog==,iv:vfaLIOYE+6+H3ehTl826NJZs5Fr0uNMFS7WtFJJJK6s=,tag:YQ/OZ8BL70F22lW7tymP4Q==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:BXUqBLXUjCPTUbUM8AFh,iv:nJ/upmNIZ95d9CmmxdY4JzZiGlW4mI4VFUTPibdtca8=,tag:tJj/85zsmT2X5tf7ZQjz/w==,type:str]
+    #ENC[AES256_GCM,data:iltNfj4nues2JO2zAWh3MWbdRJ9hi5zUaCVAfU22n5Ud,iv:HVYt57dZqIitDypHBbbljK198fIDzBLrCyhBhM0dTwA=,tag:DEkOhXKgpUWXISlBOlKjiA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:fWE4Kuax+sAcFE3SUpLJ,iv:dryUTzxldZ6TofzBXCLnuXzG7c2veKEmUBTb27Eci9s=,tag:22jzsxqxNj+5uaeEfIPEKg==,type:str]
+    #ENC[AES256_GCM,data:2gNHtEK49b3uq0y7GMzgKC9Zyc23wVQv+uJ8x1ZmdIXlHVVTZpVcDDvCCe7NqttD+X71p85egFv9ccjB/Xzwt30OAvsnMk42HqzUsFC05I8=,iv:Kd/ZXqH9OAWzmEg/JkK/phMtWmVqIcNV6GrnH6c/+WM=,tag:G6zdZc4oYMNw1+WFsMyz4w==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:cjwEGHk6a46ega+322tS,iv:DxVko/4AfVKhpQd0di+EZg1NtH+ycd2s/v8Z9iuBtD0=,tag:PkkMjF2kHPHMC1FBvSlLvg==,type:str]
+    #ENC[AES256_GCM,data:iM5z1DEojYPUeiTb+Nvn/5IDUzvW2FeSg8XEnBNLeh455SB/T4PQSM3YKkJU4UhLFQQCM3vSZPr2vCyjJ5GOhFQFePyQHDRjoG66RRFboSYDMe1llOpm,iv:Mt9GkZTGtPfBRtbVbulPMxrxqEIb61nqF1XWRbG/Fb4=,tag:krwG3Rjj7Z1/7TURQCBfVQ==,type:comment]
+    #ENC[AES256_GCM,data:2kcne0w1eYlm1Ku1SHnm8S846gg2tgQBHxY4lQnIcvVzUrdjZtWuyXpW7cJEGHwM1VriSQhujkl8rLUuSV7+i5DiOUz9u5YEQjEXZ5EC6pXZYKTyiDbXnVyPiFMsxokeVttCbPaebr+94HrbFVFl1v0ZWgEgnmlLdaRfsw==,iv:+7kvza3q/buJ2/ipvOAE2lhs4TXcvB3qpyu/G+4/2ms=,tag:zhKSucbVAVCovUBYu9Fvxg==,type:comment]
+    #ENC[AES256_GCM,data:gWlQg+TJ/TfCXREb+M9u0oUD8xbjQu0/OdyAhqkGX+Gon++BXayqxbUPOaYxS3Dpm3kCCenhl3px0CpMPSs4c6bGqFndb7iiD2ribC1MCgA=,iv:DXi7n1d6Cz/ujAuGjdXhJqo6CDAhmpWEBf0ulSIpJyM=,tag:FhcoNUkWfzuIQh3960OvHQ==,type:comment]
+    #ENC[AES256_GCM,data:dyLSnCp3qnuW4PYtvtq74pr/vvKVzSwuuy8/wUeKCoon5D2yaJjDC0IeSw7ZW/QfttgrIlj5,iv:PSV7jiPLlvNy3KxAl64pF8I2DZg5lD2l3Ph4B8XSaDs=,tag:jqdwrY33l4o8BM8uJkObkA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:NLPqr+wtJdRRcoQt,iv:bww36zyCFVlEDPjOGuUopJfo4AMVzLMuj97pCZbuT8w=,tag:s8hl9L3vjZFOGy+Z0svz0A==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:jlbyAxpcFAhdA7SWKWVg69g=,iv:hCIUb1OTNDLp/XpyW3AUXtpsEzWixTAJDhnz+GOprI0=,tag:DyKK2IA/TtDuudHd63LXvg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:gP98OUqpENsiEmhDdW5q7OqCRT53626YQI4anuSLLps=,iv:hU6BuPPfszbRM6Yg8u9k6lf4xyOsnJ1L0oSyMuiekTI=,tag:jQE57Wiql2LsE09pRpkLfQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:64RZZs73u+yOSA7TJ/1wU7rGkkILUWDpOnJCZbELuSDZj3gdfHgm8Q==,iv:C8WFSWoego7iX/3ognlssaaIrmhu6Lu/GxhHb7Uw100=,tag:qDjSFh/dERSN/t73pLS5/w==,type:str]
+    #ENC[AES256_GCM,data:30lcKPBEnsF20pYAY55a1th4fCRBx7c+IUwAEf9+KAMHn0ORIXwnhN4T1fB3ICwdcHrWnGrTjLl3+jLpFg2MAg==,iv:N5Y/ougq3KqkqD6j/xmGESc+DxYTla3AOU9QhQkvqfQ=,tag:fveqzuwwWyqP4erX+N4yLQ==,type:comment]
+    #ENC[AES256_GCM,data:vbJ4k9Wgj6WTkn7+WVfhrED/xAwftpwlpFTgSp2KRRT7T2OHZMZqmGK3SeYKuCQbkNdX5WS0w2Y=,iv:L9TqfZqKba4pouzmK+cwnfpI+lRuPfa78dTE+5FWKbU=,tag:FtcteWH/ktfKytunku6oVw==,type:comment]
+    #ENC[AES256_GCM,data:aonxkLwdP5phnhFVLyYp4AgT9CVMlMO8/g==,iv:oOcoF4tpvr+ZyHbWN3Kq760mdhqodDgoEriURw8bRjQ=,tag:Oi+Z8sG3ekPNy55E/3tRTQ==,type:comment]
+    #ENC[AES256_GCM,data:RjtmrzdUkNK5jLS4wD+xdvtsQNnLxMpi+hRqE8dhff8VVYCrmK4IIVUbdhyf4iUyLJKKuVis51sCp8pXmC1k4A0Scn2bi/RFBKQJ0ds=,iv:RbH3RABC3W/5NtYD0ulsqzMMUsUGoPQpmGObjVPUG/Q=,tag:OljuJ7GWdNYRa4Ts9wYMiQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:xTtSKlCeDFVul5CYuI01UknYzZmxDhZS59Gm9YLC1vLXcNZNXO2uOYKamekKzz0R,iv:s8PAv6dKtIYl22opzXULhxp0v9AfashTNDQ8EapV6WI=,tag:mtJAB4h/Pl7KAU3xjNqJkA==,type:str]
+    #ENC[AES256_GCM,data:AynQWcx3i8TEGqU1ypojqdH2BbJ4vr21AS2cem1z9O2ViGZSYC6EBc0xfvQXT5lHwMfqJMuOZ9euM/wyrW0iDLc7TUMG6S0=,iv:or94tkdAR1N6pkssUk0/BvJh20lUj3y4mA4WYlx9JXQ=,tag:/VlsldWuwvpPcD6EgKVD+A==,type:comment]
+    #ENC[AES256_GCM,data:qaIY5RhNsnvX6MmkWEhbAFdN5DVieoBuJmZI6kiWPC4H54kfrkVQW8pwo1d/w89ivYDx/GBx,iv:Fmcnm/5wKZeAqmyN3pun/juszjaqtc1jSBldF2y9iiA=,tag:RBah1WVTxCH9nwR09E+viw==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:nEmODEtlew==,iv:6qkckA/iI0RkQV/dppKNRS5GwXU0J9pOTR+fco49VZs=,tag:L1dOn7B799kZP/lW6Igq5w==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rsXqo+/femWBx58qIlM33TzbuNg=,iv:CwfPkxjr7OyGf4lWFbbnl0imN27h4U/C869Y3H3HSl8=,tag:3dba3twBJ/yiRBV0VkrlPg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:CSsWxKZJ6vuqSbI=,iv:+1dfhZ2F0lMlXTGk7aWp1nUjDMjxdq2C450Qwe0acMo=,tag:YDglHruS3EKfWKhjl/sf5A==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:p+2U99dZ+6kHWymjxpFG,iv:8ItPJByBvTzhDIwX9ci0S/8/fP+NgSmWfErMcgqMOTU=,tag:5G/WXCaLmwb578cUZ1w5kA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:CBUpd5VkI8Oz3eFscP/WTyXOxQ3gQgx7xw==,iv:0fCyDjJFj5cyDbz41m6wNERZgt3s0zUr0MMhMvcy8BI=,tag:8MVlaJnGCqMfxyhKafrZeg==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:oKAqKs1AdgQpvfANmDz337Y3Bv8PDe6I2qDF/4r01w==,iv:XRboaGr9NXJ3U7+f0ZGJPhVwcm9x0lfQfc7qJS4o/cE=,tag:juT5SYhiJaTGnxC7pvpcSw==,type:str]
+    #ENC[AES256_GCM,data:s+E7iSfGigT/S/RxheTx7dKtY725BrS7HZV831wgG7y4meBK8dg=,iv:gpP/zW8cl1iLoaHqmGPozPI3LVOmq4PyGSGxFC6s+os=,tag:3npeXksesMfvnsFLeU9MFw==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Iw0vPXELcholB0ktc7GUfeKgS9c=,iv:6iCG66zcO0MoCn4JpZgfYdOATDN9DNnTqOXJLY5rK60=,tag:6moa4+ekFtKoAITRd0hZMw==,type:str]
+    #ENC[AES256_GCM,data:e5LxZbf40nO31+03RLs=,iv:KjvdgSd0T/jDk6tpull7CQK7RA73gWzCTpzs0Zc6/l8=,tag:zQlslxSz3VwleqgXVTChng==,type:comment]
+    PODNET: ENC[AES256_GCM,data:apyx3qQc/61+O2nUcw==,iv:Y1ZwX2juTa8EfqqfjKGQnNts/ipJb3LEEftekyG7fXU=,tag:XgJugzEc7PEOERvkDOtq0g==,type:str]
+    SVCNET: ENC[AES256_GCM,data:jqTxQKyvFKwPBaoORA==,iv:tsUSBLB+y/hAnRaOy3eQES8P039rAq4dU4P4d54g1H4=,tag:+n9BUUGSFS+L0i8K9kRfZQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:Bagj8A==,iv:Y6UGy/dYS79bGUGkuZ6qDPMQoI+emo8rC8kqbmuuBYY=,tag:yTjcQRnNfr7iIMvF2CLcZw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5akFJVjM3UnhFNUxMdzJB
-            OTF5OFp4Si9PSGJheFZqVzFHVW1nM2FIVzF3CnJRTzJpWFVtK3NKeFdRWG01VHcv
-            TytnV1c0NytxMWcwOEZrU0FIZmQxZWcKLS0tICtqYnkyZ0ZEamtHMGpzRlBmM0Vx
-            c1p4L0wxUmh2bzVPOTlGdWFFVFZ3Z2sKU8Nablc9xOu5/sjlBctdh9VPZmUZSmZd
-            xJG9I86vD/vYR0CxO6VwR7vNZl97kGih3jvBbZlOD65nBHdrAts/yg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYQjlyUUtSQ2N1MWxjZ2hu
+            bE94SW9YenlJYjVDVFEvZ2dTNnZqZDA3cVdNCllxeGE0MEorNFlaR0NWZ0NFUmhZ
+            OXZFK3ZESTc0SlRLS1hOMVE3a0IrZ1EKLS0tIEFMUS9zNXFwQVpacEhMODhYUUpr
+            THFjZmVMbmVtczBFTFJEa1dNTkliWFkK6069jG3+WAuIF+aUP4ikyPmSEuFB194s
+            rkBw8UsX3+3rXYR6BUcB4IES3pcS+uFBpEaQfeAYtvRJvWBejwz9GQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T07:23:38Z"
-    mac: ENC[AES256_GCM,data:mgoZMbwoxQhHpsVmzubCYyhbqSe7BrEje6IEv5qdAenJW/c3ha/NKC0hDyqhXvMaS9RURm7WY4MSKzuW8B3+5ah2AC6dr+YvuP7l7LgJV5PwY9lgyLE74YuEmZFtpUu13kjWM3Da3kLB2KVe9PpSUXGP07L3qUJSVHRMJZYAniM=,iv:t87rxgQ9nKeevZRcR3zehP4P49GOAgsxb5Pnb8SCtIo=,tag:pjsUm31p/kDzr8mmeLsd5g==,type:str]
+    lastmodified: "2025-01-20T07:38:02Z"
+    mac: ENC[AES256_GCM,data:eBQh2o+kVfYw6PrHclkAXH0kxXMT5dKEelV3rMzsUgRzVKB1PQsrgjbyEpEGSiuR1EzloOuWl93OF6h75+y23b1KsEJ8QS2c5H0Nv2MhcYq6uJUxx0F+MNlSwv6ndJV6zwhmY5MvC7ZR/uRdNb/bMPDLr84SziIPOWz9m3RZGFc=,iv:afcqurV65PcjAcjoCEMM+ER0NC/S5WZC7dvtJkTbBbg=,tag:U49zevdf/3Ts9B8K3wd9eA==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
