--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -39,9 +39,9 @@ spec:
       tcp:
         loadBalancerIP: ${TRAEFIK_IP}
     middlewares:
-      ipWhiteList: []
+      ipWhiteList:
         - name: internal-only
-        sourceRange: []
-          - 192.168.0.0/16
-          - 172.16.0.0/12
-          - 10.0.0.0/8
+          sourceRange:
+            - 192.168.0.0/16
+            - 172.16.0.0/12
+            - 10.0.0.0/8
